# c_cli

./: .gitignore  CMakeLists.txt
src/: main.c
src/cli_parser/: cli_parser.c  cli_parser.h
src/configuration/: configuration.c  configuration.h  module_handler.c  module_handler.h
src/file_operations/f_collect/: f_collect.c  f_collect.h
src/file_operations/f_collect/f_matcher/: f_matcher.c  f_matcher.h
src/file_operations/f_collect/f_matcher/f_matcher_extension/: f_m_extension.c  f_m_extension.h
src/file_operations/f_collect/f_matcher/f_matcher_regex/: f_m_regex.c  f_m_regex.h
src/file_operations/f_data/: f_data.c  f_data.h
src/file_operations/f_xml/: f_xml_accessor.c  f_xml_accessor.h
src/shared/: general_types.h
src/shared/logger/: logger.c  logger.h
test/file_operations/test_files/xml_files/: testfile.xml
